<resources>
    <string name="app_name">PersCalculator</string>
    <string name="pojemnosc">Pojemność opakowania</string>
    <string name="cena">Cena</string>
    <string name="stezenie_robocze">Stężenie robocze</string>
    <string name="ilosc_litrow_gotowego_produktu">Ilość litrów gotowego produktu</string>
    <string name="cena_1l_gotowego_produktu">Cena 1l gotowego produktu</string>
    <string name="oblicz">Oblicz!</string>
</resources>
